# thesis-generator

./: .env.example  .gitignore  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
prompt/: IMPROVE.md  PLAN.md  PROMPT.md  SPEC.md  TASK.md
src/thesis_generator/: __init__.py  app.py  config.py  evaluation.py  main.py  quality.py  security.py  state.py
src/thesis_generator/agents/: __init__.py  planner.py  researcher.py  validator.py  writer.py
src/thesis_generator/graph/: __init__.py  builder.py  supervisor.py
src/thesis_generator/tools/: __init__.py  citation_check.py  code_execution.py  ingest.py  openalex.py  pdf_parser.py  scholar.py
tests/: test_citation_check.py  test_citation_fallback.py  test_code_execution.py  test_e2e_eval.py  test_env.py  test_graph_builder.py  test_ingest.py  test_interface.py  test_openalex.py  test_pdf_parser.py  test_planner.py  test_quality_gates.py  test_researcher.py  test_safety.py  test_sanity.py  test_scholar.py  test_state.py  test_supervisor.py  test_validator.py  test_writer.py
