[tool.poetry]
name = "thesis-generator"
version = "0.1.0"
description = "Autonomous Research Agent System (ARAS) prototype"
authors = ["VOID TECHNOLOGY INC"]
readme = "README.md"
packages = [{ include = "thesis_generator", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.12"
langgraph = "^0.2.16"
requests = "^2.32.3"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.1"
pyalex = "^0.19"
docling = "^0.3.5"
PyPDF2 = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
ruff = "^0.6.8"
mypy = "^1.11.2"
types-requests = "^2.32.0.20240907"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
